; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_testmodule.c_TestAssertIntegerReply.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_testmodule.c_TestAssertIntegerReply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDISMODULE_REPLY_INTEGER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"warning\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"Unexpected reply type %d\00", align 1
@.str.2 = private unnamed_addr constant [52 x i8] c"Unexpected integer reply '%lld' (instead of '%lld')\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TestAssertIntegerReply(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i64 @RedisModule_CallReplyType(i32* %9)
  %11 = load i64, i64* @REDISMODULE_REPLY_INTEGER, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i64 @RedisModule_CallReplyType(i32* %15)
  %17 = call i32 (i32*, i8*, i8*, i64, ...) @RedisModule_Log(i32* %14, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i64 %16)
  store i32 0, i32* %4, align 4
  br label %30

18:                                               ; preds = %3
  %19 = load i32*, i32** %6, align 8
  %20 = call i64 @RedisModule_CallReplyInteger(i32* %19)
  store i64 %20, i64* %8, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i64, i64* %7, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %18
  %25 = load i32*, i32** %5, align 8
  %26 = load i64, i64* %8, align 8
  %27 = load i64, i64* %7, align 8
  %28 = call i32 (i32*, i8*, i8*, i64, ...) @RedisModule_Log(i32* %25, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.2, i64 0, i64 0), i64 %26, i64 %27)
  store i32 0, i32* %4, align 4
  br label %30

29:                                               ; preds = %18
  store i32 1, i32* %4, align 4
  br label %30

30:                                               ; preds = %29, %24, %13
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i64 @RedisModule_CallReplyType(i32*) #1

declare dso_local i32 @RedisModule_Log(i32*, i8*, i8*, i64, ...) #1

declare dso_local i64 @RedisModule_CallReplyInteger(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
